--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,14 +1,33 @@
 .grid-container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 250px);
+    grid-auto-rows: 200px;
     gap: 24px;
+    max-width: 1110px;
+    width: 100%;
+    margin: 0 auto;
+    align-items: stretch;
 }
 .dashboard{
+    min-height: 100vh;
+    background-color: hsl(226, 43%, 5%);
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 90px;
-    
+    justify-content: center;
+    align-items: center;
+    padding: 40px 20px;
 
+}
 
+@media (max-width:768px) {
+    .grid-container{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 24px;
+        width: 100%;
+        grid-auto-rows: auto;
+        max-width: 340px;
+        padding: 0 16px;
+        margin: 0 auto;
+        box-sizing: border-box;
+    }
 }
